body 100% is not coverng the whole page on mobiles same issue while editing

--- a/src/css/stage.less
+++ b/src/css/stage.less
@@ -61,8 +61,8 @@
 .silex-stage-body {
   height: 100%;
   padding: 5px;
-  position: relative !important;
-  overflow: scroll;
+  position: absolute !important;
+  min-width: 100%;
 }
 .silex-stage {
   background-color: #CCCCCC;
@@ -70,6 +70,7 @@
   position: absolute;
   left: 220px;
   border: 1px solid #D9D9D9;
+  overflow: scroll;
 }
 .ui-icon-gripsmall-diagonal-se {
   background-image: none;
